@@ -3,25 +3,27 @@ Hash: SHA256
 
 DIST flashrom-0.9.6.1.tar.bz2 368133 SHA256 6f7b588cce74c90b4fe9c9c794de105de76e0323442fb5770b1aeab81e9d560a SHA512 335243ca869a49521b6404004496cdba16f11da4f5321bbc8786635bbc7a0fe7215de2015d67200da68d398ed270d9a2ad9308ca9f762790e39b9f0602e53529 WHIRLPOOL f55f53cc6f06b627d8561e369bca32f1b62dc8de9a35963c01575b31f3190cf1be3b7114db8552b7f9f87c971960f1d16fe284d44e8d2db3da2996431d08598c
 DIST flashrom-0.9.7.tar.bz2 408883 SHA256 5a55212d00791981a9a1cb0cdca9d9e58bea6d399864251e7b410b4d3d6137e9 SHA512 a226c1ac3f9c7822b74ca14b7f9b53013110b2cdb66b1f936593c693ee54f19d643cc3a97a9635c05f2c959aca817668006f609ddb503a84d0bf5d510065674e WHIRLPOOL 97472148f97b86dc3b6661fe0368f492584308a8e86f2376bd3eb6e285a02dfcf231f2d917f30a734e90fbc9baf3899329c04ea245048d647077c50646ecd17d
+DIST flashrom-0.9.8.tar.bz2 473902 SHA256 13dc7c895e583111ecca370363a3527d237d178a134a94b20db7df177c05f934 SHA512 1a1c4513bac7cdf91326ab68b822034101e688bfab0dc0b5698f664fc766027229128c55eed94f302cac05d949647cdec6a103a423c3861b047cf0ff7cc0b509 WHIRLPOOL 61381faeff133065c195e37d9cf9eced6f5ff4c3dc6103abcca8186d11de9e1523e4fcfd173f34dfa44c78ad731db25a771d670bf5cd808f00ed5e80697c5c35
 EBUILD flashrom-0.9.6.1.ebuild 2805 SHA256 7ff32111ca46658d562f40021723e9d53604e89362b8f3811ecc8d2f1d14a3d5 SHA512 248c3589fef69528ebb7bf14ef0f90a03552ec92f98d6c323b1b30e9cf18c43bac9504d603033a964ecbc2435baa243c980cd23800172b06d505768f895a0be8 WHIRLPOOL eefff6e9220e951c863111ece178b1b06b42a556691e8134b1c69fdb2d2281c4deac654949d19f78661fb6b8c79de15dbaf5208d6bce296a53e7f4b2661afdbd
 EBUILD flashrom-0.9.7.ebuild 3497 SHA256 0e04df2b4f9c082bade8094db95babb8f921454d899aa99eb87f921d9de21483 SHA512 868b2d95734eecb65f9d9b88da83f4e751810efb7765d48b6152d37e7caccfcba098ed41b300194d148cfa485be7e6462ed4699f5f7c11aba73772920b28c2e1 WHIRLPOOL 2a152bed7e56fda6a77f73575f018b842126f27b381fd0728a973063db2c6f6ac586848994ad219c27bcf07d86eb08a55b6355a712ee86935a8a93891b05eb31
-EBUILD flashrom-9999.ebuild 3490 SHA256 949d3b2b724f52b8253269c0e758bef2d788b1109f644aca17468ad6cd2e3019 SHA512 ea8fdb0d40ee9add7ab241f313a7e89038c19b7c4439fa0a24a23a32cc1f084c634e4e6edfb1e226b64e16b722b11d1a2825efa2aa7d43047b2869b325694979 WHIRLPOOL 6830ba80722d8316508dd57a9120cce3f44c01f5b131b58b4114e5a1e1270d00995e636613e0588e0e67e9b71ab1e99a9c86611794363d1b76a669f3be0a0d65
-MISC ChangeLog 6640 SHA256 0f0237106167c8e795d0ad1c4793fd3c5e5c111c57ba313ccf5bc8f2201d9e92 SHA512 9d5bd1b029fd01d837d1447decfac478c41fa2b9d17586a85c9455e00bd50e91b406d23fb227c99dc0ae35b38d0c20d863b4651307526ae925f3f6ef76af7d83 WHIRLPOOL 79abe189f546a7ac34c27b68e00a878d6a3a489a665bc2f23876f535dddeaf5bcde3dc739dedf9c8fa777e87ffb786d12b350c10f12461574be323f661141302
-MISC metadata.xml 3634 SHA256 8a9ea83f8c348728870fa1206c51b6eb5ab5c0a2ea0a20c1633580c27b8ab67a SHA512 83dff1345f5907d904fe64b439dde4bb57be1c3ae0fbc777dabf481cb73ad9dda534a8c15f43c1ac0bdf1414bd47b101d011e3461eaaa28455f9742b6f64564b WHIRLPOOL b5c47d3661fe030e3cce04cd24a5c345f57e5c520baf78c176fceca1fdcaf106d40c11461ae48e218164b5567ed76e55f713f025e23ee60c72614165e7acf164
+EBUILD flashrom-0.9.8.ebuild 4235 SHA256 684509d1933abef9176e2dedcf973f185050f7e2e444a24639482beeefb78f37 SHA512 99d0eaec79ed92811d1feb84819ba8abfa8729c7fc8a909aa421d575a1cf3a11c971a4f3f81adb5940d8a3261c719a8281e3140d1961e3131ee02c0f8ef7b442 WHIRLPOOL f534a42919780aaa17a3995f3a46c9756ea847c428a30d25963a585e732a10990b935b17e5ebc8128ecdcd51341ddaf9e069b0a83b439c138f0c3a5223ec1c0a
+EBUILD flashrom-9999.ebuild 4235 SHA256 34c7f21d5e15e45bfb36501791c50d17379bbe48bac055158fa1bc85b8983168 SHA512 44e2338165e581c7e1bfe3f384ff23343fa92ed887ea8af629c50f102d21497aee66617c34388001893052664644fa8a2648606f43be6e77225ab408f07440a8 WHIRLPOOL 9f46fb0c3784cad6fd0c790ec3d2f4d97e9870f58f0e4f515c2a0d7621d8eb8ebb3b62971d2941abf9a1cdde0e1a08a8ad88c0fe674c4dd90b760396a818f689
+MISC ChangeLog 6800 SHA256 a1e5730eaf9c773e0bf0d698f5be17ee1e92132f3d4555fe5a6cafc2837c4e40 SHA512 92f0c2d27d7ab7233d0a58aec9194433782cb984afa533c9ba56628553405d7f7a96406cbc87e848f63ea5c569542414389a1e4ff940bbcfc9457a4a9dcebb06 WHIRLPOOL 0daf4682f0dabe6c1970e134f5bf86905df77e590d5d7d3f61e0ca92830e02eeee143cb9051025b5503100db36140cb7f6984e57970e77864a4f5dfe0fd9629f
+MISC metadata.xml 4266 SHA256 3547c27f0d0f6509db49ef429b92523468e42f843db0d8afd9140da56fa6676f SHA512 4c91fc8ea05e4e43a8acc21e023b4d6a652e4f940390f0a05d9b2cab60f25565eb5107137b122409f6c429477cf4258c9040ae0d37c53317ff21b6667fa6184a WHIRLPOOL d236f8fbb196d720d367d91780e482f0beb7f66525fbe35589f85d75e1c613d193e0f778491f7ea3a73637c682e86661389414bb065e9c4eb313a9a5961c872c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT3uxiAAoJEPGu1DbS6WIAILAP/3d8n1viVTr3eQIyI2+rRYcR
-KmZViEOfYkaGrRd9OPOOyMqbewcFWNI7+ZYGu5fkxk6go4r4ZUUN1NqUmzyMp5nN
-vZDT61xQW5CiiafJGCHvZ7TwGm+35x9AaszGuvqAWdJD9m3vgs4gdluseKyFT9K+
-Rjh66cHfFt+eQ12TSPlCjVeElr3Yq2PSmT7FSEnKN1jzXwV1aS/7Qt+9ipqSMYIR
-aXnROkuPrw9SieOU8Y1PkfAJOYtYu3PnUTA6YCO8g3YQF94s2HuckOC/aTBuVFHu
-pSy56fPLAGlhplRb+tbrg7vMt935iChznYwJDWH/w3JgSeQboAw7AcpF9xj2yKV+
-hCHpM+5z7dKppisFiiIQqdOsAimkxlpe+1oc6Z9K8k/x+BkkGvr/dMdjJSDoGQnG
-Iln8hX7LCLE4DiLqvTiDNo79NqFPoTaUPNa3Bwsqbks01Ghc+ksSbqR08sUCIHyR
-80Mgxn8L1CaTjEujzP3cXvNJrI+few/zqvaApI3VxA9i+Sn+ZdwxOLtO8AlOcuhQ
-Jc+RZuLKa73xRUCU4t5xONAYL5TnvLJHCItgMPjIGOlQPNgt9CxUY4Mjzex7TODE
-5gO6kUvTx63icFmfUxZqRVtinsvO2acfAI1IFyDFlVy/bjwc9Ids/eAdvRU/ziC5
-Xk9LuqAtXfagVaEE3ntM
-=HR+N
+iQIcBAEBCAAGBQJVMc0WAAoJEPGu1DbS6WIAmFQP/Ag6fQ/6zT7LpSQUIgPSuKOA
+rYD7ne8bKrgHb9VEFOR21AAnwMNsx9YxJuvJTOn/x4hZH+OEt5HUt36hzLyfct7z
+78xrfXt8M1OPXzCtOpxpl2E6DzgfuKw99C+MHbV3K2CCQz1D+9QmoYFkKTfTeh2k
+IVT2TyxNNvlIhnbeB780D2Mw78Ht2f5xMI1gKEZrWyVK1wfVd2Go8k/Lztwm153g
+AIb2Ma3OLEwX49Gr0OmI2MhMgz9jFhIqIpoZ8qi40ly4l+IF1RqLvKRN0VunChOf
+/R2zX5QHeSdHyjtPoJ828x6TA9fhqPTbowLCtOc6wh9lQLsTnIyWxdLaOti5YRvQ
+N+3hcG8OtBW0aqvEvpFGBr+3V7OSHlAtL39P9MZLJ63CRuyPqWcUsls5dBT2wbhX
+6b9Kahm5XALI6p6PNM8EX5v2gfUscq4wQrQCXB+RyQ2XMl9rHALHlalJUbm8E3Cy
+OCbaI/avBMZ0TbsQFJUuzScUw6812m6RRvUISob+IVOxoHdjPfDFUtOCe8AZpA3w
+CSw+cMlMk9zaFcpp/3qv7Fj59W9CiL0DcvY3XVogOBlsIW3CqRqBCiNPg1UtKa6X
+2H+9iVA3shSymO0zrm9ooqz1GbHtMWk+GHnn+LpS546BFwNUkozjDUXzqSI9jlwf
+oOUilYU1LXM4GVh1B2OA
+=aOAx
 -----END PGP SIGNATURE-----
