@@ -12,6 +12,7 @@
 	</maintainer>
 	<use>
 		<flag name="atahpt">Highpoint (HPT) ATA/RAID controller support</flag>
+		<flag name="atavia">Support for VIA VT6421A SATA controllers</flag>
 		<flag name="bitbang_spi">Bitbanging SPI infrastructure</flag>
 		<flag name="buspirate_spi">Enable Bus Pirate SPI programmer</flag>
 		<flag name="dediprog">Dediprog SF100 support</flag>
@@ -20,13 +21,18 @@
 		<flag name="ft2232_spi">Enable ftdi programmer, flashing through FTDI/SPI USB interface</flag>
 		<flag name="gfxnvidia">Enable NVIDIA programmer</flag>
 		<flag name="internal">Enable internal/onboard support</flag>
+		<flag name="internal_dmi">Enable internal DMI decoding rather than use <pkg>sys-apps/dmidecode</pkg></flag>
+		<flag name="it8212">Support for ITE IT8212F ATA/RAID controllers</flag>
 		<flag name="linux_spi">Enable support for Linux userspace spidev interface</flag>
+		<flag name="mstarddc_spi">Support for SPI flash ROMs accessible through DDC in MSTAR-equipped displays</flag>
 		<flag name="nic3com">Enable 3Com NIC programmer</flag>
 		<flag name="nicintel">Support for Intel NICs</flag>
+		<flag name="nicintel_eeprom">Support for EEPROMs on Intel Gigabit network cards</flag>
 		<flag name="nicintel_spi">Support for SPI on Intel NICs</flag>
 		<flag name="nicnatsemi">Support for National Semiconductor NICs</flag>
 		<flag name="nicrealtek">Support for Realtek NICs</flag>
 		<flag name="ogp_spi">Enable support for OGP (Open Graphics Project) SPI flashing</flag>
+		<flag name="pickit2_spi">SUpport for SPI flash ROMs accessible via Microchip PICkit2</flag>
 		<flag name="pony_spi">Enable support for SI-Prog like hardware by Lancos</flag>
 		<flag name="rayer_spi">RayeR SPIPGM hardware support</flag>
 		<flag name="satasii">Enable programmer for SiI SATA controllers</flag>
@@ -34,6 +40,7 @@
 		<flag name="serprog">Enable Serial Flasher programmer</flag>
 		<flag name="tools">Install additional tools</flag>
 		<flag name="usbblaster">Enable support for Altera USB-Blaster dongles</flag>
+		<flag name="usbblaster_spi">Enable support for Altera USB-Blaster dongles</flag>
 		<flag name="wiki">Enable wiki informations, like supported devices etc.</flag>
 	</use>
 	<longdescription lang="en">
