@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/flashrom
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/flashrom/ChangeLog,v 1.46 2014/08/04 02:13:47 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/flashrom/ChangeLog,v 1.47 2015/04/18 03:18:44 vapier Exp $
+
+*flashrom-0.9.8 (18 Apr 2015)
+
+  18 Apr 2015; Mike Frysinger <vapier@gentoo.org> +flashrom-0.9.8.ebuild,
+  flashrom-9999.ebuild, metadata.xml:
+  Version bump.
 
   04 Aug 2014; Mike Frysinger <vapier@gentoo.org> flashrom-0.9.7.ebuild,
   flashrom-9999.ebuild:
